[package]
name = "trailbase-extension"
version = "0.3.0"
edition = "2024"
license = "OSL-3.0"
description = "SQLite extension used by TrailBase"
homepage = "https://trailbase.io"
repository = "https://github.com/trailbaseio/trailbase"
readme = "../../README.md"

[lib]
crate-type=["cdylib", "rlib"]

[dependencies]
arc-swap = "1.7.1"
argon2 = { version = "^0.5.3", default-features = false, features = ["alloc", "password-hash", "rand", "std"] }
base64 = { workspace = true }
jsonschema = { version = "0.40.0", default-features = false }
log = "0.4.27"
maxminddb = "0.27.0"
parking_lot = { workspace = true }
quick_cache = "0.6.18"
regex = "1.11.0"
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0.12"
uuid = { workspace = true }
validator = { version = "0.20.0", default-features = false }
