[package]
name = "trailbase-extension"
version = "0.3.0"
edition = "2024"
license = "OSL-3.0"
description = "SQLite extension used by TrailBase"
homepage = "https://trailbase.io"
repository = "https://github.com/trailbaseio/trailbase"
readme = "../../README.md"

[lib]
crate-type=["rlib"]

[dependencies]
arc-swap = "1.7.1"
argon2 = { version = "^0.5.3", default-features = false, features = ["alloc", "password-hash", "rand", "std"] }
base64 = { workspace = true }
bcrypt = "0.18.0"
jsonschema = { version = "0.41.0", default-features = false }
maxminddb = "0.27.0"
parking_lot = { workspace = true }
quick_cache = { version = "0.6.18", default-features = false }
regex = "1.11.0"
# NOTE: rusqlite must not enable "bundled" for the .so built to work.
rusqlite = { version = "0.38.0", default-features = false, features = ["functions"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2.0.12"
uuid = { workspace = true }
validator = { version = "0.20.0", default-features = false }
