[package]
name = "trailbase-js"
version = "0.2.0"
edition = "2024"
license = "OSL-3.0"
description = "JS runtime for the TrailBase framework"
homepage = "https://trailbase.io"
readme = "../README.md"
exclude = [
  "**/node_modules/",
  "**/dist/",
]

[lib]
doctest = false

[dependencies]
bytes = { version = "1.8.0", features = ["serde"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
kanal = "0.1.1"
log = { version = "^0.4.21", default-features = false }
parking_lot = { workspace = true }
rusqlite = { workspace = true }
rust-embed = { workspace = true }
rustyscript = { version = "^0.12.0", features = ["web", "fs"] }
self_cell = "1.2.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
trailbase-schema = { workspace = true }
trailbase-sqlite = { workspace = true }

[build-dependencies]
trailbase-build = { workspace = true }
