[package]
name = "trailbase-qs"
version = "0.1.1"
edition = "2024"
license = "OSL-3.0"
description = "Query string parser for TrailBase"
homepage = "https://trailbase.io"
repository = "https://github.com/trailbaseio/trailbase"
readme = "../../README.md"

[dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
itertools = "0.14.0"
serde = { workspace = true }
serde-value = "0.7.0"
serde_qs = { workspace = true }
uuid = { workspace = true }
wkt = { version = "0.14.0", default-features = false }

[dev-dependencies]
rusqlite = { workspace = true }
