[package]
name = "trailbase-schema"
version = "0.1.0"
edition = "2024"
license = "OSL-3.0"
description = "Schema utilities for the TrailBase framework"
homepage = "https://trailbase.io"
repository = "https://github.com/trailbaseio/trailbase"
readme = "../README.md"

[dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
fallible-iterator = "0.3.0"
infer = "0.19.0"
itertools = "0.14.0"
jsonschema = { version = "0.33.0", default-features = false }
lazy_static = "1.5.0"
log = { version = "^0.4.21", default-features = false }
parking_lot = { workspace = true }
regex = "1.11.1"
rusqlite = { workspace = true }
schemars = "1.0.0"
serde = { version = "^1.0.203", features = ["derive"] }
serde_json = "1.0.122"
sqlite3-parser = "0.15.0"
thiserror = "2.0.12"
tokio = { workspace = true }
trailbase-extension = { workspace = true }
ts-rs = { version = "11", features = ["uuid-impl", "serde-json-impl"] }
uuid = { workspace = true }

[dev-dependencies]
anyhow = "1.0.97"
indoc = "2.0.6"
trailbase-sqlite = { workspace = true }
