[package]
name = "trailbase-sqlite"
version = "0.3.0"
edition = "2024"
license = "OSL-3.0"
description = "Async SQLite connection for TrailBase"
homepage = "https://trailbase.io"
repository = "https://github.com/trailbaseio/trailbase"
readme = "../../README.md"
autobenches = false

[[bench]]
name = "synthetic"
path = "benches/synthetic/benchmark.rs"
harness = false

[[bench]]
name = "join-order"
path = "benches/join-order/main.rs"
harness = false

[dependencies]
kanal = "0.1.1"
log = { version = "^0.4.21", default-features = false }
parking_lot = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_rusqlite = { workspace = true }
thiserror = "2.0.12"
tokio = { workspace = true }

[dev-dependencies]
chrono = "0.4.43"
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
csv = "1.4.0"
env_logger = { workspace = true }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
glob = "0.3.3"
itertools = "0.14.0"
log = "0.4.27"
rand = { workspace = true }
tempfile = "3.19.1"
trailbase-extension = { workspace = true }
uuid = { workspace = true }
